Fix width on mobile

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,9 +1,13 @@
 .portfolioItem {
+    display: inline-flex;
     width: calc(50% - 50px);
+    margin-right: 50px;
 }
 
 @media only screen and (max-width: 975px) {
     .portfolioItem {
-        width: 100%;
+        display: flex;
+        width: auto;
+        margin-right: 0px;
     }
 }
